add factory for model checkers